<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.DetailGalaxyActivity"
    android:background="@color/purple_light"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/galaxy_photo"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@color/black"/>
        </LinearLayout>

        <TextView
            android:textColor="@color/white"
            android:id="@+id/galaxy_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/galaxy_name"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textStyle="bold"/>

        <TextView
            android:textColor="@color/white"
            android:id="@+id/galaxy_inventor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/galaxy_inventor"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/galaxy_title_information"
            style="@style/TextContentDetails"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/CardView.Detail">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                style="@style/LinearLayoutDetail">


                <TextView
                    android:textStyle="bold"
                    android:id="@+id/galaxy_information"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/galaxy_information"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/galaxy_title_detail"
            style="@style/TextContentDetails.Details"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/CardView.Detail">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                style="@style/LinearLayoutDetail">

                <TextView
                    android:textStyle="bold"
                    android:id="@+id/galaxy_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/galaxy_detail"
                    android:justificationMode="inter_word"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <Button
            android:id="@+id/galaxy_like"
            android:text="@string/galaxy_button_like"
            style="@style/ButtonLike"/>
    </LinearLayout>

</ScrollView>