<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    style="@style/CardView.Review">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:background="@color/purple_light"
        android:padding="10dp">
        <ImageView
            android:id="@+id/galaxy_photo"
            android:layout_width="150dp"
            android:layout_height="250dp"
            android:layout_marginBottom="15dp"
            android:scaleType="centerCrop"
            tools:src="@tools:sample/avatars" />
        <TextView
            android:textColor="@color/white"
            android:id="@+id/galaxy_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:layout_toEndOf="@id/galaxy_photo"
            android:layout_toRightOf="@id/galaxy_photo"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="@string/galaxy_name" />
        <TextView
            android:textColor="@color/white"
            android:id="@+id/galaxy_detail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/layout_galaxy_button"
            android:layout_below="@id/galaxy_name"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_toEndOf="@id/galaxy_photo"
            android:layout_toRightOf="@id/galaxy_photo"
            android:ellipsize="end"
            android:maxLines="50"
            tools:text="@string/galaxy_detail" />
        <LinearLayout
            android:id="@+id/layout_galaxy_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_toEndOf="@id/galaxy_photo"
            android:layout_toRightOf="@id/galaxy_photo"
            android:orientation="horizontal">
            <Button
                android:id="@+id/galaxy_favorite"
                style="@style/ButtonFavorite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/galaxy_favorite"
                android:textSize="12sp" />
            <Button
                android:id="@+id/galaxy_share"
                style="@style/ButtonShare"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/galaxy_share"
                android:textSize="12sp" />
        </LinearLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>